fix .space z-index

--- a/static/stylesheet/style.less
+++ b/static/stylesheet/style.less
@@ -466,7 +466,7 @@ ul.social {
     position: absolute;
     top: 0;
     width: 800%;
-    z-index: 1;
+    z-index: -1;
 }
 @keyframes slide {
   0%      {transform: translate3d(0, 0, 0);}
